# nonebot-plugin-qqfarm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
nonebot_plugin_qqfarm/: __init__.py  api_client.py  api_client.py.bak  config.py  requirements.txt  token_manager.py  version.py  webhook.py
