[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot-plugin-qqfarm"
version = "1.0.10"
description = "QQ农场自动化助手 - NoneBot插件，支持账号管理、自动操作、离线通知、Webhook推送"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "salus-A", email = "salus814@163.com"}
]
keywords = ["nonebot", "qqfarm", "qq", "farm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=2.0.0",
    "asyncmy>=0.2.11",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "fastapi>=0.100.0",
]

[project.urls]
"Homepage" = "https://github.com/salus-A/nonebot-plugin-qqfarm"
"Repository" = "https://github.com/salus-A/nonebot-plugin-qqfarm"
"Issues" = "https://github.com/salus-A/nonebot-plugin-qqfarm/issues"

[tool.nonebot]
plugins = ["nonebot_plugin_qqfarm"]

[tool.setuptools.packages.find]
include = ["nonebot_plugin_qqfarm*"]
